<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="question">Enter your formula…</string>
    <string name="answer">= Answer</string>
    <string name="error">Error</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="buttonC">C</string>
    <string name="buttonAC">AC</string>
    <string name="button_dot">.</string>
    <string name="button_eq">=</string>
    <string name="button_mod">%</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">×</string>
    <string name="button_div">÷</string>
    <string name="button_ans">Ans</string>
    <string name="button_backspace">Backspace</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_left_parenthesis">(</string>
    <string name="button_right_parenthesis">)</string>
    <string name="button_pi">π</string>
    <string name="button_e">e</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_sqrt">√</string>
    <string name="button_power">xⁿ</string>
    <string name="button_log">log<sub>e</sub></string>
    <string name="button_log10">log<sub>10</sub></string>
    <string name="button_asin">sin<sup>-1</sup></string>
    <string name="button_acos">cos<sup>-1</sup></string>
    <string name="button_atan">tan<sup>-1</sup></string>
    <string name="button_power_10">10ⁿ</string>
</resources>