<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutKeypad2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onClearClick"
                android:text="@string/buttonC"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onAllClearClick"
                android:text="@string/buttonAC"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onBackspaceClick"
                android:text="@string/button_backspace"
                android:textAlignment="center"
                app:icon="@drawable/baseline_backspace_24"
                app:iconTint="@color/btnBackground2" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onEqualClick"
                android:text="@string/button_eq"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onDigitClick"
                android:text="@string/button_left_parenthesis"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onDigitClick"
                android:text="@string/button_right_parenthesis"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onConstantClick"
                android:text="@string/button_pi"
                android:textAllCaps="false"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onConstantClick"
                android:textAllCaps="false"
                android:text="@string/button_e"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_sin"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_cos"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_tan"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_sqrt"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_asin"
                android:textSize="10sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_acos"
                android:textSize="9sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/digitButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_atan"
                android:textSize="9sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onOperatorClick"
                android:text="@string/button_power"
                android:textAllCaps="false"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onOperatorClick"
                android:text="@string/button_mod"
                android:textSize="32sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_log10"
                android:textAllCaps="false"
                android:textSize="10sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_log"
                android:textAllCaps="false"
                android:textSize="13sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/operatorButton"
                android:layout_margin="12dp"
                android:onClick="onFunctionClick"
                android:text="@string/button_power_10"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>